--- a/integration/requirements.txt
+++ b/integration/requirements.txt
@@ -1,4 +1,3 @@
-pip==22.0.3
 absl-py==1.2.0
 altair==4.2.0
 antlr4-python3-runtime==4.9.3
@@ -14,6 +13,7 @@ black==22.3.0
 bleach==5.0.1
 blinker==1.5
 cachetools==5.2.0
+#certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
 cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.0.0
@@ -23,6 +23,8 @@ Cython==0.29.32
 debugpy==1.6.2
 decorator==5.1.1
 defusedxml==0.7.1
+# Editable install with no version control (detectron2==0.6)
+#-e .
 entrypoints==0.4
 fairscale==0.4.6
 fastjsonschema==2.16.1
@@ -145,4 +147,3 @@ Werkzeug==2.2.2
 widgetsnbextension==3.6.1
 yacs==0.1.8
 zipp==3.8.1
-libgl1-mesa-glx
