--- a/integration/requirements.txt
+++ b/integration/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==0.75.0
 numpy==1.21.6
 pandas==1.3.5
-opencv-python==4.6.0.66
+opencv-python-headless==4.6.0.66
 torch==1.8.0
 torchaudio==0.8.0
 torchvision==0.9.0
