--- a/integration/requirements.txt
+++ b/integration/requirements.txt
@@ -72,7 +72,8 @@ notebook==6.4.12
 numpy==1.21.6
 oauthlib==3.2.0
 omegaconf==2.2.2
-opencv-python-headless==4.6.0.66
+#opencv-python-headless==4.6.0.66
+opencv-contrib-python==4.6.0.66
 packaging==21.3
 pandas==1.3.5
 pandocfilters==1.5.0
